[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/game_element/enemy/tear_enemy/tear_enemy_normal/tear_enemy_normal.gd" type="Script" id=1]
[ext_resource path="res://Scenes/game_element/enemy/tear_enemy/tear_enemy_normal/tear_enemy_normal_visuals/tear_enemy_normal_directions.png" type="Texture" id=2]
[ext_resource path="res://Scenes/game_element/enemy/tear_enemy/tear_enemy_normal/tear_enemy_normal_visuals/tear_enemy_normal_shoot.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 19, 0, 19, 25 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 19, 25 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 57, 0, 19, 25 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 38, 0, 19, 25 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 57, 0, 19, 25 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 38, 0, 19, 25 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 19, 25 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 19, 0, 19, 25 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Active-DownRight",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Active-DownLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Active-UpLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "Shoot-Right",
"speed": 20.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Active-UpRight",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Shoot-Left",
"speed": 20.0
} ]

[node name="TearEnemyNormal" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "Active-DownLeft"
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 8, 0, 1, -10, 0, -10, -7, 0, -7, 5, -6, 8, -5, 9, -4, 10, -1, 11, 2, 11, 5, 10, 7, 8, 8, 5, 8, 0 )
[connection signal="area_entered" from="." to="." method="_on_TearEnemy_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
